--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,10 @@ dependencies {
     // https://mvnrepository.com/artifact/io.rest-assured/rest-assured
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.4.0'
     testImplementation 'org.testng:testng:7.7.0'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    implementation 'ch.qos.logback:logback-classic:1.2.5'
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
