--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,9 @@ dependencies {
 test {
     useTestNG()
 }
+
+gradle.taskGraph.whenReady { taskGraph ->
+    if (taskGraph.hasTask(':build')) {
+        taskGraph.getAllTasks().find { it.name == 'test' }?.enabled = false
+    }
+}
